GP-4287: Format. Revise. Certify.